hw1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /otusapp/olegtrygub/(/|$)(.*)
          backend:
              service:
                name: hello-service
                port:
                  number: 9000
          pathType: Prefix
